@@ -5,6 +5,7 @@
     123s
   - hex number only allow A, B, C, D, E, F because f is used to specify the number is floating point
     and b is used to specify the number is byte
+  - fix array float store and load bug
 0.0239 2017-08-05
   - cleanup enum internal logic
   - fix clang compiler error
